ajouter un nom sur la bbd

--- a/views/components/adresse.ejs
+++ b/views/components/adresse.ejs
@@ -1,9 +1,9 @@
-<%- include('composants/head') %> 
+<%- include('head') %> 
 <body>
- <%- include('composants/entete') %>
- <%- include('composants/form') %>
- <%- include('composants/table') %>
- <%- include('composants/footer') %>
+ <%- include('entete') %>
+ <%- include('form_post') %>
+ <%- include('adr') %>
+ <%- include('footer') %>
 </body>
 
 
