--- a/views/components/adr.ejs
+++ b/views/components/adr.ejs
@@ -4,6 +4,7 @@
  <th><a href='/trier/nom/asc'>Nom</a></th> 
  <th><a href='/trier/prenom/asc'>Prenom</a></th>
  <th><a href='/trier/telephone/asc'>Telephone</a></th>
+ <th><a href='/trier/telephone/asc'>Courriel</a></th>
  <th>Ajouter</th> 
  </tr>
  <% adresses.forEach(elm => {%>
@@ -12,7 +13,8 @@
  <td contenteditable='true'><%= elm.nom %></td>
  <td contenteditable='true'><%= elm.prenom %></td>
  <td contenteditable='true'><%= elm.telephone %></td>
- <td><a href="/delete/<%= elm._id %>">Delete</a></td>
+ <td contenteditable='true'><%= elm.courriel %></td>
+ <td><a href="/detruire/<%= elm._id %>">Delete</a></td>
  <td><a class='sauver' href="#">Sauver</a></td>
  </tr>
  <% }) %>
