--- a/views/components/adresse.ejs
+++ b/views/components/adresse.ejs
@@ -24,6 +24,7 @@
  let nom = laLigne.children[1].innerHTML
  let prenom = laLigne.children[2].innerHTML
  let telephone = laLigne.children[3].innerHTML
+ let courrriel = laLigne.children[4].innerHTML
 
 let elmForm = document.getElementById('mon_formulaire')
  console.log(elmForm.tagName)
@@ -32,6 +33,7 @@ let elmForm = document.getElementById('mon_formulaire')
  elmInput[1].value = nom
  elmInput[2].value = prenom
  elmInput[3].value = telephone
+ elmInput[4].value = courrriel
 
 elmForm.submit()
 
