--- a/public/less/style.less
+++ b/public/less/style.less
@@ -1,7 +1,32 @@
+header{
+	background-color: #1c1c1c;
+	color: white;
+	display: flex;
+	flex-direction: column;
+	justify-content:center;
+	align-items:center;
+
+	nav{
+		a{
+			color :white;
+			text-decoration: none;
+			padding-left: 1em;
+		}	
+	}
+
+	section{
+		display: flex;
+		flex-direction: column;
+		justify-content:center;
+		align-items:center;
+	}
+
+}
+
 table{
 	border-collapse: collapse;
 	tbody{
-		td{
+		td,td{
 			border: 1px solid black;
 		}
 	}
