--- a/public/less/style.less
+++ b/public/less/style.less
@@ -9,9 +9,10 @@ header{
 	display: flex;
 	flex-direction: column;
 	justify-content:center;
-	align-items:center;
+	align-items:center
 
 	nav{
+
 		a{
 			color :white;
 			text-decoration: none;
@@ -28,11 +29,25 @@ header{
 
 }
 
+form{
+	padding-top: 1em;
+	display: flex;
+	justify-content:center;
+	align-items:center
+
+	input{
+		padding-left: 4em;
+	}
+
+}
+
 table{
 	border-collapse: collapse;
 	margin:1em;
+
 	tbody{
 		td,td,th{
+			text-align: center;
 			width: 10em;
 			border: 1px solid black;
 		}
@@ -44,7 +59,8 @@ footer{
 	width: 100%;
 	background-color: #1b1b1b;
 	display: flex;
-	flex-direction:row;
+	justify-content:center;
+	align-items:center
 
 
 	a{
