--- a/public/less/style.less
+++ b/public/less/style.less
@@ -50,6 +50,11 @@ table{
 			text-align: center;
 			width: 10em;
 			border: 1px solid black;
+
+			a{
+				color:black;
+				text-decoration: none;
+			}
 		}
 	}
 	
@@ -58,9 +63,9 @@ table{
 footer{
 	width: 100%;
 	background-color: #1b1b1b;
-	display: flex;
-	justify-content:center;
-	align-items:center
+	// display: flex;
+	// justify-content:center;
+	// align-items:center
 
 
 	a{
