--- a/public/less/style.less
+++ b/public/less/style.less
@@ -7,9 +7,9 @@ header{
 	background-color: #1c1c1c;
 	color: white;
 	display: flex;
-	flex-direction: column;
-	justify-content:center;
-	align-items:center
+	// flex-direction: column;
+	// justify-content:center;
+	// align-items:center
 
 	nav{
 
